--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: lightgreen;
+  background-color: rgb(81, 183, 227);
 }
 
 @media only screen and (orientation: landscape) {
   body {
-    background-color: lightblue;
+    background-color: rgb(75, 220, 138);
   }
 }
 * {
@@ -61,9 +61,10 @@ html {
 
 .footer {
   background-color: #0099cc;
-  color: #ffffff;
+  color:black;
   text-align: center;
   font-size: 12px;
+  font-family: Lucida Sans, sans-serif;
   padding: 15px;
 }
 
@@ -101,4 +102,33 @@ html {
   .col-10 {width: 83.33%;}
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
+}
+
+video{
+  max-width: 100%;
+  height: auto;
+}
+
+.hdrimg{
+  max-width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .textsizechange {
+    font-size: 45px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .textsizechange {
+    font-size: 25px;
+  }
+}
+.footer{
+  width: 100%;
+  height: 400px;
+  background-image: url('/images/Seasky.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border: 3px solid black;
 }
